fix: opam switch
* Avoid error """
  The following dependencies couldn't be met:
    - coq-serapi -> ocaml >= 4.07.0
        base of this switch (use `--unlock-base' to force)
  """.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,11 @@ jobs:
         with:
           custom_image: ${{ matrix.image }}
           custom_script: |
+            # TODO remove this step after the single-switch migration
+            startGroup 'Set opam switch'
+              opam switch 4.07.1+flambda
+              eval $(opam env)
+            endGroup
             startGroup 'Print opam config'
               opam config list; opam repo list; opam list
             endGroup
